--- a/package.json
+++ b/package.json
@@ -7,33 +7,31 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
-    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
-    "start": "node src/server.js",
-    "predeploy": "npm audit && npm run migrate:production",
-    "deploy": "git push heroku master"
+    "seed": "node seeds/seed.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "engines": {
     "node": "13.2.0"
   },
-  "author": "Tom `tomatao` HT <tomht@thinkful.com>",
+  "author": "Mason Reichbauer",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "helmet": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
+    "postgrator-cli": "^3.3.0",
     "pg": "^8.14.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.9",
-    "postgrator-cli": "^3.1.0",
-    "supertest": "^3.3.0"
+    "chai": "^4.5.0",
+    "mocha": "^10.8.2",
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.4"
   }
 }
