--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "engines": {
-    "node": "13.2.0"
+    "node": "18.x"
   },
   "author": "Mason Reichbauer",
   "license": "MIT",
